# Auto_Cleaner

./: .gitignore  ARCHITECTURE.md  CASE_STUDY.md  README.md  pyproject.toml  requirements.txt  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: airflow_dag.py  build_capabilities_pdf.py  build_paper.py  contract_cars.yml  fetch_real_datasets.py  generate_raw.py  run_real_benchmarks.py  scale_probe.py
examples/data/: cars_ab.csv  cars_shifted.csv  climate_demo.csv  raw_cars.csv
examples/output_ts/: clean_climate.parquet  clean_climate_eda.md  clean_climate_results.json
r/: eda_companion.R
sql/: ingest.sql  profiling.sql
src/auto_cleaner/: __init__.py  __main__.py  causal.py  config.py  drift.py  embeddings.py  functional.py  inference.py  logging_utils.py  modeling.py  pdfreport.py  persistence.py  pipeline.py  predict.py  reporting.py  reproducibility.py  specialize.py  tuning.py  validate.py
src/auto_cleaner/analyze/: __init__.py  feature_relevance.py  multicollinearity.py  tests.py  transforms.py
src/auto_cleaner/clean/: __init__.py  dtypes.py  impact.py  impute.py  outliers.py  standardize.py
src/auto_cleaner/eda/: __init__.py  report.py  stats.py  summary.py  visualize.py
src/auto_cleaner/ingest/: __init__.py  detect.py  readers.py
src/auto_cleaner/stats/: __init__.py  associations.py  bayesian.py  distributions.py  forecast.py  multivariate.py  nlp.py  robust.py  survey.py  survival.py  timeseries.py
tests/: test_advanced.py  test_auto_cleaner.py  test_extended.py  test_golden_report.py  test_header_detection.py  test_impact_summary.py  test_ingest_excel.py  test_ingest_hostile.py  test_meta.py  test_optin.py  test_outputs.py  test_png_export_fallback.py  test_preamble.py  test_production.py  test_profiles.py  test_property_ingest.py  test_stats_periphery.py
tests/golden/: report_fixture.md
